--- a/src/Components/HomeComponent/Home.css
+++ b/src/Components/HomeComponent/Home.css
@@ -3,8 +3,8 @@
     justify-content: center;
     background: url(../../Images/sakuraHome.png) center 0/cover no-repeat fixed;
     background-color: #ffb7c5;
-    width: 100%;
-    height: 100vh;
+    height: 100%;
+    position: absolute;
 }
 
 .homeDiv {
@@ -20,6 +20,7 @@
     animation-fill-mode: forwards;
     text-decoration: none;
     padding-bottom: 10vh;
+    z-index: 101;
 }
 
 .homeText:hover {
